--- a/index.html
+++ b/index.html
@@ -199,7 +199,35 @@ $(document).ready(function(){
 </script>
 </head>
 <body>
-<div id="mensaje">                	
+<div class="sidebar">	
+  	<div class="s-content">
+          <ul id="nav">
+          	<li class="top">
+            <br />
+            <img src="img/logo.png" width="100" height="100" /><br />
+            RadioCity FM 107.1<br />
+            San Salvador de Jujuy, Argentina.          
+            </li>
+            <!-- Main menu with font awesome icon -->
+            <li id="linkenvivo"><a href="#"><i class="icon-play"></i> EN VIVO<span class="pull-right"><i class="icon-chevron-right"></i></span></a></li>
+            <li id="lienvivo" class="oculto">
+           		<div id="envivo">
+                	<div id="reproductor"></div><br />
+                    <div id="activar_play"><a href="javascript:playPause();"><img src="img/reproducir.png" /></a></div>
+                    <div id="activar_pausa" style="display:none"><a href="javascript:playPause();"><img src="img/pausar.png" /></a></div>
+                  	<div id="datos_radio">Estás escuchando<br />
+                    <div id="imagen"></div>
+                    <div id="programa"></div><br />
+                    Conduce <div id="conduce"></div>
+                    <div id="horario"></div>
+                    </div>
+                </div>
+            </li>
+			<div class="clear"></div>
+            <li id="linkmensaje"><a href="#"><i class="icon-comments"></i> ENVIAR MENSAJE  <span class="pull-right"><i class="icon-chevron-right"></i></span></a></li>
+            <li id="limensaje" class="oculto">
+            	<div id="mensaje-enviado"></div>
+				<div id="mensaje">                	
                 	<div class="titulo">Escribínos</div>
                     <div class="label">Nombre</div>
                     <div id="label_nombre"></div>
@@ -212,5 +240,13 @@ $(document).ready(function(){
                     <textarea id="texto" name="texto"></textarea>
                     <div id="boton_enviar" class="boton_enviar">Enviar</div>  
                 </div>
+			</li>
+		</ul>
+	</div>
+</div>
+<script src="js/bootstrap.js"></script>
+<script src="js/custom.js"></script>
+</body>
+</html>            
 </body>
 </html>
