--- a/index.html
+++ b/index.html
@@ -222,7 +222,7 @@ $(document).ready(function(){
            		<div id="envivo">
                 	<div id="reproductor"></div><br />
                     <div id="activar_play"><img src="img/reproducir.png" /></div>
-                    <div id="activar_pausa"><img src="img/pausar.png" /></div>
+                    <div id="activar_pausa" class="oculto"><img src="img/pausar.png" /></div>
                   	<div id="datos_radio">Estás escuchando<br />
                     <div id="imagen"></div>
                     <div id="programa"></div><br />
@@ -231,7 +231,18 @@ $(document).ready(function(){
                     </div>
                 </div>
             </li>
-			
+			<li id="linkfacebook"><a href="#"><i class="icon-facebook-sign"></i> FACEBOOK <span class="pull-right"><i class="icon-chevron-right"></i></span></a></li>
+            <li id="lifacebook" class="oculto">
+            	<div id="facebook">
+                	<div id="facebookfeed"></div>
+                </div>
+            </li>                       
+            <li id="linktwitter"><a href="#"><i class="icon-twitter-sign"></i> TWITTER <span class="pull-right"><i class="icon-chevron-right"></i></span></a></li>
+            <li id="litwitter" class="oculto">
+            	<div id="twitter">
+                	<div id="twitterfeed"></div>
+                </div>
+            </li>
             <li id="linkmensaje"><a href="#"><i class="icon-comments"></i> ENVIAR MENSAJE  <span class="pull-right"><i class="icon-chevron-right"></i></span></a></li>
             <li id="limensaje" class="oculto">
             	<div id="mensaje-enviado"></div>
