--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
 <link rel="stylesheet" href="css/bootstrap.css">
 <link rel="stylesheet" href="css/font-awesome.css">
 <script src="js/cordova-2.7.0.js" type="text/javascript"></script>
-<script src="js/jquery-ui.js"></script>
 <script src="js/jquery-1.8.3.min.js" type="text/javascript"></script>
+<script src="js/jquery-ui.js"></script>
 <script>
 function loadURL(url){
 	navigator.app.loadUrl(url, { openExternal:true });			
@@ -216,6 +216,7 @@ $(document).ready(function(){
             RadioCity FM 107.1<br />
             San Salvador de Jujuy, Argentina.          
             </li>
+            <div class="clear"></div>
             <!-- Main menu with font awesome icon -->
             <li id="linkenvivo"><a href="#"><i class="icon-play"></i> EN VIVO<span class="pull-right"><i class="icon-chevron-right"></i></span></a></li>
             <li id="lienvivo" class="oculto">
@@ -231,18 +232,21 @@ $(document).ready(function(){
                     </div>
                 </div>
             </li>
+            <div class="clear"></div>
 			<li id="linkfacebook"><a href="#"><i class="icon-facebook-sign"></i> FACEBOOK <span class="pull-right"><i class="icon-chevron-right"></i></span></a></li>
             <li id="lifacebook" class="oculto">
             	<div id="facebook">
                 	<div id="facebookfeed"></div>
                 </div>
-            </li>                       
+            </li>  
+            <div class="clear"></div>                     
             <li id="linktwitter"><a href="#"><i class="icon-twitter-sign"></i> TWITTER <span class="pull-right"><i class="icon-chevron-right"></i></span></a></li>
             <li id="litwitter" class="oculto">
             	<div id="twitter">
                 	<div id="twitterfeed"></div>
                 </div>
             </li>
+            <div class="clear"></div>
             <li id="linkmensaje"><a href="#"><i class="icon-comments"></i> ENVIAR MENSAJE  <span class="pull-right"><i class="icon-chevron-right"></i></span></a></li>
             <li id="limensaje" class="oculto">
             	<div id="mensaje-enviado"></div>
@@ -260,6 +264,8 @@ $(document).ready(function(){
                     <div id="boton_enviar" class="boton_enviar">Enviar</div>  
                 </div>
 			</li>
+            <div class="clear"></div>
+            <li><a href="javascript:exitAppPopup();"><i class="icon-remove-sign"></i> SALIR<span class="pull-right"><i class="icon-chevron-right"></i></span></a></li>
 		</ul>
 	</div>
 </div>
