--- a/index.html
+++ b/index.html
@@ -250,7 +250,8 @@ $(document).ready(function(){
             <li id="linkmensaje"><a href="#"><i class="icon-comments"></i> ENVIAR MENSAJE  <span class="pull-right"><i class="icon-chevron-right"></i></span></a></li>
             <li id="limensaje" class="oculto">
             	<div id="mensaje-enviado"></div>
-				<div id="mensaje">                	
+				<div id="mensaje"> 
+                	<form id="pedido" name="pedido">               	
                 	<div class="titulo">Escribínos</div>
                     <div class="label">Nombre</div>
                     <div id="label_nombre"></div>
@@ -262,6 +263,7 @@ $(document).ready(function(){
                     <div id="label_texto"></div>
                     <textarea id="texto" name="texto"></textarea>
                     <div id="boton_enviar" class="boton_enviar">Enviar</div>  
+                    </form>
                 </div>
 			</li>
             <div class="clear"></div>
