--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@ function IsEmail(email) {
 }
 function exitAppPopup() {
 	navigator.notification.confirm(
-		  'Salir de TodoJujuy.com?'
+		  '¿Salir de Radio City FM?'
 		, function(button) {
 			  if (button == 2) {
 				  navigator.app.exitApp();
