--- a/index.html
+++ b/index.html
@@ -220,7 +220,7 @@ $(document).ready(function(){
             </li>
             <div class="clear"></div>
             <!-- Main menu with font awesome icon -->
-            <li id="linkenvivo"><a href="#"><i class="icon-play"></i> EN VIVO<span class="pull-right"><i class="icon-chevron-right"></i></span></a></li>
+            <li id="linkenvivo"><i class="icon-play"></i> EN VIVO<span class="pull-right"><i class="icon-chevron-right"></i></span></li>
             <li id="lienvivo" class="oculto">
            		<div id="envivo">
                 	<div id="reproductor"></div><br />
@@ -235,21 +235,21 @@ $(document).ready(function(){
                 </div>
             </li>
             <div class="clear"></div>
-			<li id="linkfacebook"><a href="#"><i class="icon-facebook-sign"></i> FACEBOOK <span class="pull-right"><i class="icon-chevron-right"></i></span></a></li>
+			<li id="linkfacebook"><i class="icon-facebook-sign"></i> FACEBOOK <span class="pull-right"><i class="icon-chevron-right"></i></span></li>
             <li id="lifacebook" class="oculto">
             	<div id="facebook">
                 	<div id="facebookfeed"></div>
                 </div>
             </li>  
             <div class="clear"></div>                     
-            <li id="linktwitter"><a href="#"><i class="icon-twitter-sign"></i> TWITTER <span class="pull-right"><i class="icon-chevron-right"></i></span></a></li>
+            <li id="linktwitter"><i class="icon-twitter-sign"></i> TWITTER <span class="pull-right"><i class="icon-chevron-right"></i></span></li>
             <li id="litwitter" class="oculto">
             	<div id="twitter">
                 	<div id="twitterfeed"></div>
                 </div>
             </li>
             <div class="clear"></div>
-            <li id="linkmensaje"><a href="#"><i class="icon-comments"></i> ENVIAR MENSAJE  <span class="pull-right"><i class="icon-chevron-right"></i></span></a></li>
+            <li id="linkmensaje"><i class="icon-comments"></i> ENVIAR MENSAJE  <span class="pull-right"><i class="icon-chevron-right"></i></span></li>
             <li id="limensaje" class="oculto">
             	<div id="mensaje-enviado"></div>
 				<div id="mensaje"> 
